Breakfast page fully made

--- a/recipes/breakfast.html
+++ b/recipes/breakfast.html
@@ -6,7 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
+   <a href="../index.html"> <h2>Home</h2></a>
+    <img src="../images/Breakfast Images/full-english-7355w-2.jpg" 
+    height="450" width="600" 
+    alt="Full English Breakfast">
+
+    <br>
+
+    <h2><em> Start the day off with a full english breakfast!</em> </h2>
+
+ 
+
+ <h4>Note:</h4> <em> Serves one person. Cook time is 30-40 minutes. </em>
     
+ <br>
+
+    <h4>Ingredients:</h4>
+
+    <ul>
+    
+    <li><u>2 medium pork sausage patties</u></li>
+    <li><u>1 tomato</u></li>
+    <li><u>2 tablespoons butter, divided</u></li>
+    <li><u>2 slices bacon</u></li>
+    <li><u> ¼ (16 ounce) package frozen hash browns, thawed</u></li>
+    <li><u>1 (6 ounce) package sliced fresh mushrooms</u></li>
+    <li><u>1 (15 ounce) can baked beans</u></li>
+    <li><u>1 large egg</u></li>
+    <li><u>2 slices bread</u></li>
+    <li><u>1 sprig of fresh parsley, chopped</u></li>
+    <li><u> Salt and pepper to taste</u></li>
+
+</ul>
+
+<h4> Directions:</h4>
+
+<ol>
+    <li>Preheat the oven to 425 degrees F (220 degrees C). </li>
+    <br>
+    <li>Brown the sausages on all sides in a frying pan over medium heat for 5 minutes. Transfer to a baking dish. </li>
+    <br>
+    <li>Bake the sausages in the preheated oven for 10 minutes. </li>
+    <br>
+    <li>Bake the sausages and the tomato for 10 minutes. Turn off the oven, but do not remove the sausages and tomato.</li>
+    <br>
+    <li>Meanwhile, in the frying pan used to brown the sausages, melt 1 tablespoon of butter and fry the bacon, hash browns, and the mushrooms over high heat until the mushrooms have softened, the bacon begins to crisp, and the hash browns turn golden, about 7 minutes. Transfer to the oven to keep warm. </li>
+    <br>
+    <li>Pour beans in a small saucepan and cook, stirring frequently, over medium heat until heated through. </li>
+    <br>
+    <li>Crack egg into a skillet over medium heat. Cook until outer edges become opaque, about 1 minute. Cover, reduce heat to low, and cook until whites are completely set, about 4 minutes.</li>
+    <br>
+    <li>Toast bread and spread remaining butter over.</li>
+    <br>
+    <li>Bring together the sausages, hash browns, bacon, beans, tomato, mushrooms, fried egg, and toast on a warm serving plate. Season with salt and pepper, garnish with parsley, and serve immediately. </li>
+   
+</ol>
+
 </body>
 </html>
