--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     height="450" width="600" 
     alt="Spinach Pasta">
 
-    <a href="./recipes/lunch.html"> <h3>Hearty Pasta Lunch</h3> </a>
+    <a href="./recipes/lunch.html"> <h3>Refreshing Pasta Lunch</h3> </a>
 
     <img src="./images/Dinner Images/pexels-engin-akyurt-2260555.jpg" 
     height="450" width="600" 
     alt="Pizza">
 
-    <a href="./recipes/lunch.html"> <h3>Refreshing Pizza Dinner</h3> </a>
+    <a href="./recipes/lunch.html"> <h3>Hearty Pizza Dinner</h3> </a>
 
 </body>
 </html>
