add dinner page + fix dinner leading to lunch

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     height="450" width="600" 
     alt="Pizza">
 
-    <a href="./recipes/lunch.html"> <h3>Hearty Pizza Dinner</h3> </a>
+    <a href="./recipes/dinner.html"> <h3>Hearty Pizza Dinner</h3> </a>
 
 </body>
 </html>
